--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en" id="home">
     <head>
     <meta charset="utf-8" />
@@ -43,9 +43,9 @@
         <!-- akhir Navbar -->
         <!-- Jumbotron -->
         <div class="jumbotron text-center">
-            <img src="../../../Dokumentasi CSS/CSS Layouting/Latihan/fikri.jpg" class="img-circle ">
+            <img src="img/elaina-header.jpg" class="img-circle ">
             <h1 class="">Fikri Rayhan</h1>
-            <p>Student | Web Developer | Human</p>
+            <p>Student | Web Developer</p>
         </div>
         <!-- akhir Jumbotron -->
         <!-- About -->
@@ -107,7 +107,7 @@
                     </div>
                     <div class="col-sm-4">
                         <a href="" class="thumbnail">
-                            <img src="img/ellena.png" alt="ellena">
+                            <img src="img/view_1.jpg" alt="view_1">
                         </a>
                     </div>
                 </div>
@@ -125,27 +125,27 @@
                 </div>
                 <div class="row">
                     <div class="col-sm-8 col-sm-offset-2">
-                        <form>
+                        <form name="portfolio-bootstrap-3">
                             <div class="form-group">
                                 <label for="nama">Nama</label>
-                                <input type="text" id="nama" class="form-control" placeholder="Masukkan nama">
+                                <input type="text" id="nama" class="form-control" placeholder="Masukkan nama" name="nama">
                             </div>
                             <div class="form-group">
                                 <label for="email">Email</label>
-                                <input type="email" id="email" class="form-control" placeholder="Masukkan email">
+                                <input type="email" id="email" class="form-control" placeholder="Masukkan email" name="email">
                             </div>
                             <div class="form-group">
                                 <label for="telp">No. Telepon</label>
-                                <input type="tel" id="telp" class="form-control" placeholder="Masukkan telepon">
+                                <input type="tel" id="telp" class="form-control" placeholder="Masukkan telepon" name="notelp">
                             </div>
-                            <select class="form-control">
+                            <select class="form-control" name="option">
                                 <option>-- Pilih Kategori --</option>
                                 <option>Web Developer</option>
                                 <option>Web Designer</option>
                             </select>
                             <div class="form-group">
                                 <label for="pesan">pesan</label>
-                                <textarea id="pesan" class="form-control" rows="10" placeholder="Masukkan pesan"></textarea>
+                                <textarea id="pesan" class="form-control" rows="10" placeholder="Masukkan pesan" name="pesan"></textarea>
                             </div>
                             <button type="submit" class="btn btn-primary">Kirim Pesan</button>
                         </form>
@@ -178,5 +178,19 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
     <script src="js/script.js"></script>
+    <script>
+        const scriptURL = 'https://script.google.com/macros/s/AKfycbz4_Mh0Yb9K1lsak5mHm0cHxTQF_1e46ZOQPJ3_62wnn5zZYZBkrHBKNkvBDUr6sfwm_A/exec'
+        const form = document.forms['portfolio-bootstrap-3']
+
+        form.addEventListener('submit', e => {
+            e.preventDefault()
+            fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+            .then(response => {
+                console.log('Success!', response)
+                form.reset()
+            })
+            .catch(error => console.error('Error!', error.message))
+        })
+    </script>
     </body>
 </html>
