--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 <div class="row">
                     <div class="col-sm-12">
                         <i class="glyphicon glyphicon-play"></i>
-                        <a target="_blank" href="https://www.youtube.com/@mekanikorbital1102" class="btn btn-danger"><i class="glyphicon glyphicon-play"></i> Subscribe to Youtube</a>
+                        <a target="_blank" href="" class="btn btn-danger"><i class="glyphicon glyphicon-play"></i> Subscribe to Youtube</a>
                     </div>
                 </div>
             </div>
